# humanrf

./: .gitmodules  README.md  image_zoom.js  index.html  model_viewer.js  pyproject.toml  requirements.txt
actorshq/: setup.py
actorshq/dataset/: aabb_data.py  camera_data.py  data_loader.py  download_manager.py  generate_camera_trajectory.py  input_batch.py  trajectory.py  volumetric_dataset.py
actorshq/dataset/native/: occupancy_grid.cu  ray_sampler.cu
actorshq/evaluation/: evaluate.py  presets.py
actorshq/toolbox/: README.md  export_blender.py  export_colmap.py  export_ngp.py  generate_occupancy_grids_from_masks.py  import_dfa.py
actorshq/toolbox/mesh_tools/: CMakeLists.txt
actorshq/toolbox/mesh_tools/alembic_extractor/: CMakeLists.txt  README.md  main.cpp
actorshq/toolbox/mesh_tools/cmake/: ExternAlembic.cmake
actorshq/toolbox/mesh_tools/renderer/: CMakeLists.txt  main.cpp
actorshq/toolbox/native/: occupancy_grid_generation.cu  utils.cuh
humanrf/: adaptive_temporal_partitioning.py  input.py  run.py  setup.py  trainer.py  volume_rendering.py
humanrf/args/: model_args.py  run_args.py
humanrf/configs/: example_humanrf.py
humanrf/scene_representation/: decomposition4d.py  humanrf.py  query_io.py
humanrf/scene_representation/native/: tensor_composition.cu
humanrf/utils/: activation.py  loss.py  memory.py
